# financial-fraud-detective

./: Dockerfile  README.md  data.py  environment.py  index.html  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
