[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "financial-fraud-detective"
version = "1.0.0"
description = "Financial Fraud Detective OpenEnv environment"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "pydantic>=2.8.2",
]

[project.scripts]
server = "server:main"
